--- a/style.css
+++ b/style.css
@@ -1,9 +1,36 @@
-div {
+body {
+    margin: 0;
+}
+#navbar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: rgb(0, 0, 0);
+}
+#navbar li {
+    float: left;
+}
+#navbar li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+.main {
     width: 80%;
-    margin: auto;
+    padding: 20px;
+    margin: 30px auto;
     text-align: center;
 }
-ul { 
+.list { 
     display: inline-block; 
     text-align: left; 
+}
+#kentucky-image {
+    width: 60%;
 }
