--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    font-family: 'Noto Sans JP', sans-serif;
 }
 #navbar {
     position: fixed;
@@ -14,13 +15,16 @@ body {
 #navbar li {
     float: left;
 }
+#navbar li:hover {
+    background-color: rgba(150, 146, 146, 0.5);
+}
 #navbar li a {
     display: block;
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-}
+}   
 .main {
     width: 80%;
     padding: 20px;
@@ -30,7 +34,25 @@ body {
 .list { 
     display: inline-block; 
     text-align: left; 
+    margin-top: -10px;
 }
 #kentucky-image {
     width: 60%;
+}
+.img-container {
+    width: 100%;
+}
+#headshot {
+    width: 200px;
+    border-radius: 50%;
+    border: 2px solid black;
+}
+#linkedin {
+    color: rgb(68, 68, 202);
+}
+#linkedin:hover {
+    color: rgb(110, 110, 192);
+}
+#my-name {
+    margin-top: 75px;
 }
